--- a/welfare/package.json
+++ b/welfare/package.json
@@ -19,7 +19,8 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
